refactor: major changes

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
-DATABASE_URL="postgresql://postgres:root@localhost:5430/db_name"
+DATABASE_URL="postgresql://postgres:root@localhost:5430/db_test_auth"
+PGDATA="/data/postgres"
+
 JWT_SECRET=<YOUR_JWT_SECRET>
 JWT_EXPIRATION_IN=2h
-# NODE_ENV=production
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=db_test_auth
+DB_PORT=5430
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=123456
+PGADMIN_PORT=5050
