--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:up": "docker compose -f ./docker/docker-compose.yml up -d",
-    "docker:down": "docker compose -f ./docker/docker-compose.yml down"
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
