--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manga-hub",
+  "name": "manga-hub-backend",
   "version": "0.0.1",
   "private": true,
   "license": "UNLICENSED",
@@ -16,7 +16,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:up": "docker compose up -d",
+    "docker:up": "docker compose up --build -d",
     "docker:down": "docker compose down"
   },
   "dependencies": {
