--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
