--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@prisma": ["src/prisma"],
-      "@prisma/*": ["src/prisma/*"],
-      "@user": ["src/user"],
-      "@user/*": ["src/user/*"],
-      "@auth/*": ["src/auth/*"],
-      "@common": ["libs/common/src"],
-      "@common/*": ["libs/common/src/*"]
+      "@/*": ["src/*"]
     }
   }
 }
