fix: fixed network connections with docker

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:root@host.docker.internal:5430/db_test_auth"
+DATABASE_URL="postgresql://postgres:root@postgres_container:5430/db_test_auth"
 PGDATA="/data/postgres"
 
 JWT_SECRET=<YOUR_JWT_SECRET>
