--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,12 @@ services:
       - 3000:3000
     volumes:
       - ./src:/app/src
+    networks:
+      - postgres
     depends_on:
       db:
         condition: service_healthy
-    
+
   db:
     container_name: postgres_container
     build: ./postgres
@@ -28,33 +30,38 @@ services:
       PGDATA: ${PGDATA:-/data/postgres}
     volumes:
       - postgres:${PGDATA:-/data/postgres}
-    ports:
-      - "${DB_PORT:-5432}:5432"
     networks:
       - postgres
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER:-postgres}", "-d", "${POSTGRES_DB:-postgres_db}"]
+      test:
+        [
+          "CMD",
+          "pg_isready",
+          "-U",
+          "${POSTGRES_USER:-postgres}",
+          "-d",
+          "${POSTGRES_DB:-postgres_db}"
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # pg_admin:
-  #   container_name: pgadmin_container
-  #   build: ./pgadmin
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
-  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-root}
-  #   volumes:
-  #     - pgadmin:/root/.pgadmin
-  #   ports:
-  #     - "${PGADMIN_PORT:-5050}:80"
-  #   networks:
-  #     - postgres
-  #   restart: unless-stopped
-
+  pg_admin:
+    container_name: pgadmin_container
+    build: ./pgadmin
+    env_file:
+      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-root}
+    volumes:
+      - pgadmin:/root/.pgadmin
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    networks:
+      - postgres
+    restart: unless-stopped
 
 networks:
   postgres:
@@ -63,3 +70,5 @@ networks:
 volumes:
   postgres:
   pgadmin:
+
+
