--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:root@postgres_container:5430/db_test_auth"
+DATABASE_URL="postgresql://postgres:root@postgres_container:5432/mangadb"
 PGDATA="/data/postgres"
 
 JWT_SECRET=<YOUR_JWT_SECRET>
@@ -9,8 +9,8 @@ GOOGLE_CLIENT_SECRET=
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
-POSTGRES_DB=db_test_auth
-DB_PORT=5430
+POSTGRES_DB=mangadb
+DB_PORT=5432
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=123456
