feat: update docker migrate option

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docker:up": "docker compose up --build -d",
-    "docker:down": "docker compose down"
+    "docker:down": "docker compose down",
+    "docker:migrate": "docker compose -f docker-compose.migrate.yml up -d --build"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
