--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
 DATABASE_URL="postgresql://postgres:root@postgres_container:5432/mangadb"
 PGDATA="/data/postgres"
+PGADATA="/var/lib/pgadmin"
 
-JWT_SECRET=<YOUR_JWT_SECRET>
+JWT_SECRET=
 JWT_EXPIRATION_IN=2h
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DB=mangadb
 DB_PORT=5432
+DB_HOST=postgres_container
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=123456
