--- a/docker-compose.migrate.yml
+++ b/docker-compose.migrate.yml
@@ -1,18 +1,20 @@
 version: '3.5'
 
 services:
-  nest:
-    container_name: nest_container
-    build: .
-    ports:
-      - 3000:3000
-    volumes:
-      - ./src:/app/src
+  prisma_migrate:
+    container_name: prisma_migrate
+    build:
+      context: .
+      dockerfile: migrate.Dockerfile
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - DB_HOST=${DB_HOST:-postgres_container}
+    env_file:
+      - .env
     networks:
       - postgres
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     restart: unless-stopped
 
   db:
@@ -24,7 +26,6 @@ services:
       - postgres:${PGDATA:-/data/postgres}
     networks:
       - postgres
-    restart: unless-stopped
     healthcheck:
       test:
         [
@@ -35,27 +36,12 @@ services:
           "-d",
           "${POSTGRES_DB:-postgres_db}"
         ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  pg_admin:
-    container_name: pgadmin_container
-    build: ./pgadmin
-    env_file:
-      - .env
-    volumes:
-      - pgadmin:${PGADATA:-/var/lib/pgadmin}
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    networks:
-      - postgres
     restart: unless-stopped
+
+volumes:
+  postgres:
+
 
 networks:
   postgres:
     driver: bridge
-
-volumes:
-  postgres:
-  pgadmin:
