--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,11 @@ version: '3.5'
 services:
   nest:
     container_name: nest_container
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    env_file:
+      - .env
     ports:
       - 3000:3000
     volumes:
