--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -48,6 +48,9 @@ services:
       - pgadmin:${PGADATA:-/var/lib/pgadmin}
     ports:
       - "${PGADMIN_PORT:-5050}:80"
+    depends_on:
+      db:
+        condition: service_healthy
     restart: unless-stopped
 
 volumes:
