--- a/docker/node/Dockerfile.migrate
+++ b/docker/node/Dockerfile.migrate
@@ -4,14 +4,12 @@ RUN echo $DATABASE_URL
 
 WORKDIR /app
 
-RUN apk update
-RUN apk add postgresql-client
+RUN apk update && apk add postgresql-client
 
 COPY ./package.json ./
 COPY ./prisma ./prisma/
 
-RUN yarn install
-RUN yarn prisma generate
+RUN yarn install && yarn prisma generate
 
 COPY ./bash/migrate-postgres.sh ./
 RUN chmod +x ./migrate-postgres.sh
