--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,9 +5,11 @@ services:
     container_name: nest_container
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: ./docker/node/Dockerfile.dev
     env_file:
       - .env
+    environment:
+      - NODE_ENV=development
     ports:
       - 3000:3000
     volumes:
@@ -19,7 +21,7 @@ services:
 
   db:
     container_name: postgres_container
-    build: ./postgres
+    build: ./docker/postgres
     env_file:
       - .env
     volumes:
@@ -41,13 +43,13 @@ services:
 
   pg_admin:
     container_name: pgadmin_container
-    build: ./pgadmin
+    build: ./docker/pgadmin
     env_file:
       - .env
     volumes:
-      - pgadmin:${PGADATA:-/var/lib/pgadmin}
+      - pgadmin:${PGADATA}
     ports:
-      - "${PGADMIN_PORT:-5050}:80"
+      - "${PGADMIN_PORT}:80"
     depends_on:
       db:
         condition: service_healthy
