fear: add swagger

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.2.0",
     "@prisma/client": "^5.8.1",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.2",
