--- a/docker-compose.add-migration.yml
+++ b/docker-compose.add-migration.yml
@@ -1,8 +1,8 @@
 version: '3.5'
 
 services:
-  prisma_migrate:
-    container_name: prisma_migrate
+  prisma_add_migration:
+    container_name: prisma_add_migration
     build:
       context: .
       dockerfile: ./docker/node/Dockerfile.migrate
@@ -10,7 +10,17 @@ services:
       - .env
     depends_on:
       - db
-    command: [ "./migrate.sh", "$DB_HOST", "$POSTGRES_USER" ]
+    volumes:
+      - ./prisma:/app/prisma
+    tty: true
+    stdin_open: true
+    command:
+      [
+        "./create-migration.sh",
+        "$DB_HOST",
+        "$POSTGRES_USER",
+        "$MIGRATION_NAME"
+      ]
 
   db:
     container_name: postgres_container
